$Id$

Wishlist for future features
~~~~~~~~~~~~~~~~~~~~~~~~~~~~

-> see bottom of this document


MIDIboxSEQ V4.094
~~~~~~~~~~~~~~~~~

   o implemented COPY, PASTE, COPY+PASTE and CLEAR in PATTERN page

   o support for Antilog PCB.
     The appr. HW configuration file can be found under hwcfg/antilog/MBSEQ_HW.V4

   o improved ALL button behaviour


MIDIboxSEQ V4.093
~~~~~~~~~~~~~~~~~

   o new parameter type "Chord3" provides an alternative set of 108 chords.
     Thanks to EsotericLabs for providing the chord table!

   o notes in edit screen are displayed transposed now

   o drum tracks: random probability layer now working as intended

   o layers are now initialized for 6 notes polyphony by default (8 layers, 128 steps)

   o optionally pattern changes don't re-send the PC/bank settings.
     This option can be configured in the UTILITY->Options menu (item #4/18)


MIDIboxSEQ V4.092
~~~~~~~~~~~~~~~~~

   o new parameter layers for track specific root note and scale

     Root selection strategy: if Root is assigned to any parameter 
     layer of a track, the layer can either select the global root 
     selection ("Glb") or set the root note for each step explicitely.

     The global root selection is configured in the FX->Scale page,
     it's either "Keyb" (for MIDI keyboard entry) or C, C#, ... B

     The local root selection is C, C#, ... B

     Notes and Chords will be transposed accordingly if the track is in
     Normal mode (and not in Transpose or Arpeggiator mode)

     Similar for Scale: it can override the globally configured scale
     of the FX->Scale page for each step.
     
   o new drum configurations: 4*16/2*64, 4*16/2*128, 4*16/1*256

   o new configuration option in Track Mode page: "Note Last/First"
     Allows to specify, if the transposer should take the last or first
     played note (previously it always played the last note)

   o new configuration option in Track Mode page: "STrg" (Step Trigger).