@@ -11,10 +11,15 @@ MIDIboxSEQ V4.094
 
    o implemented COPY, PASTE, COPY+PASTE and CLEAR in PATTERN page
 
-   o support for Antilog PCB.
+   o support for Antilog Frontpanel.
      The appr. HW configuration file can be found under hwcfg/antilog/MBSEQ_HW.V4
 
    o improved ALL button behaviour
+
+   o New worflow for MUTE page: GP 1/2, 5/6, 9/10, 13/14 allow to select group as well
+     (especially interesting for Antilog Frontpanel: Selection buttons can be used for mutes)
+
+   o EDIT page: improved handling for chord layers
 
 
 MIDIboxSEQ V4.093
